--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -53,20 +52,20 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
+          <li class="nav-item" id="nav1">
             <a class="nav-link active" aria-current="page" href="#about">About</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" id="nav1">
             <a class="nav-link active" href="#glimpses">Events</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" id="nav1">
             <a class="nav-link active" href="#">Members</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="https://forms.gle/MU8HcYsQXrciH7PF9">Join Us</a>
+          <li class="nav-item" id="nav1">
+            <a class="nav-link active" href="https://forms.gle/Uc26McobVGyZQbSR8">Join Us</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="https://www.instagram.com/skilleliters/">Contact Us</a>
+          <li class="nav-item" id="nav1">
+            <a class="nav-link active" href="https://linktr.ee/skilleliters">Contact Us</a>
           </li>
 
         </ul>
@@ -189,7 +188,7 @@
       <li class=""><img src="Images/logo.png" alt="Img 4" /></li>
       <li class=""><img src="Images/SOUMILI MUKHERJEE.png" alt="Img 5" /></li>
       <li class=""><img src="Images/Varun Goyal (1).png" alt="Img 6" /></li>
-      <li class=""><img src="Images/Varun Goyal (1).png" alt="Img 7" /></li>
+      <li class=""><img src="Images/img.png" alt="Img 7" /></li>
               <!-- <li><img src="https://images.pexels.com/photos/761536/pexels-photo-761536.jpeg?cs=srgb&dl=attractive-beautiful-beauty-761536.jpg&fm=jpg" alt="Img 7" /></li> -->
     </ul>
   </div>
@@ -214,7 +213,7 @@
       </div>
       <div class="box m-3" style="display:inline-block;">
         <i class="fas fa-users fa-3x"></i><br><br>
-        <h3>35+</h3>Members
+        <h3>50+</h3>Members
       </div>
     </center>
   </div>
@@ -244,7 +243,7 @@ linear-gradient(45deg, #353b48 95%, rgba(0,0,255,0) 30%);">
             <a href="https://github.com/Skill-Eliters"><i class="fab fa-github"></i></a><br>
             <!-- Credits -->
             <strong>Developed & designed with <i class="fas fa-heart" style="color: red"></i> by <a
-                style="text-decoration:none" href="https://resume-ph945y.spheron.app/">Devanshu Saxena</a></strong>
+                style="text-decoration:none" href="https://devanshusaxenas.netlify.app/">Devanshu Saxena</a></strong>
             <!-- Rights-->
             <p class="rights"><span>©  </span>
               <span class="copyright-year">
@@ -276,7 +275,7 @@ linear-gradient(45deg, #353b48 95%, rgba(0,0,255,0) 30%);">
             <li><a style="text-decoration:none" href="https://www.linkedin.com/company/skill-eliters/mycompany/?viewAsMember=true"><i class="fab fa-linkedin"></i> Linkedin</a></li>
             <li><a style="text-decoration:none" href="https://twitter.com/skilleliters"><i class="fab fa-twitter"></i> Twitter</a></li>
             <li><a style="text-decoration:none" href="https://github.com/Skill-Eliters"><i class="fab fa-github"></i> Github</a></li>
-            <li><a style="text-decoration:none" href="/forum/faculty/"><i class="fa-solid fa-users"></i> Join Us</a></li>
+            <li><a style="text-decoration:none" href="https://forms.gle/Uc26McobVGyZQbSR8"><i class="fa-solid fa-users"></i> Join Us</a></li>
             <li><a style="text-decoration:none" href="/team/team_page/"><i class="fa-solid fa-phone"></i>  Contact Us</a></li>
             <!-- <li><a style="text-decoration:none" href="/forum/webdteam/">All members</a></li> -->
           </ul>
